Duzelt: Index Hmtl render eklendi

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -719,6 +719,7 @@
   amsterdamGroup.getLayers().push(vector_Amsterdam_GetirCandidateLocations);
   amsterdamGroup.getLayers().push(vector_Amsterdam_GetirLocations);
   updateLegend(resolution, wms_source_amsterdam_nufusyogunlugu, 'legend_nufusyogunluk_amsterdam');
+  layerSwitcher.renderPanel()
 
 
   ///// Tooltip OverLaye for Vector Layers on Click
