Duzelt: Layer adı düzeltildi

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -412,7 +412,7 @@
   // Add Group Layer for Adana
   var adanaGroup = new ol.layer.Group({
     layers: [],
-    title: 'Adana Veri Katmanaları',
+    title: 'Adana Veri Katmanları',
   });
 
   map.addLayer(adanaGroup);
@@ -532,7 +532,7 @@
   // Add Group Layer for Amsterdam
   var amsterdamGroup = new ol.layer.Group({
     layers: [],
-    title: 'Amsterdam Veri Katmanaları',
+    title: 'Amsterdam Veri Katmanları',
   });
   map.addLayer(amsterdamGroup);
 
