--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -1,8 +1,8 @@
-<!-- <link rel="stylesheet" href="https://openlayers.org/en/v6.3.1/css/ol.css" type="text/css"> -->
-<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/external/ol.css')}}">
+<link rel="stylesheet" href="https://openlayers.org/en/v6.3.1/css/ol.css" type="text/css">
+<!-- <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/external/ol.css')}}"> -->
 
-<!-- <script src="https://openlayers.org/en/v6.3.1/build/ol.js"></script> -->
-<script src="{{url_for('static', filename='javascript/external/ol.js')}}"></script>
+<script src="https://openlayers.org/en/v6.3.1/build/ol.js"></script>
+<!-- <script src="{{url_for('static', filename='javascript/external/ol.js')}}"></script> -->
 
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.6.1/proj4.js"></script> -->
 <script src="{{url_for('static', filename='javascript/external/proj4.js')}}"></script>
@@ -20,13 +20,14 @@
 <!-- <link href="https://unpkg.com/ol-geocoder/dist/ol-geocoder.min.css" rel="stylesheet"> -->
 <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/external/ol-geocoder.min.css')}}">
 
-<!-- <script src="https://unpkg.com/ol-geocoder"></script> -->
-<script src="{{url_for('static', filename='javascript/external/ol-geocoder.js')}}"></script>
+<script src="https://unpkg.com/ol-geocoder"></script>
+<!-- <script src="{{url_for('static', filename='javascript/external/ol-geocoder.js')}}"></script> -->
 
 <script src="{{url_for('static', filename='javascript/config.js')}}"></script>
 <script src="{{url_for('static', filename='javascript/helper.js')}}"></script>
 
 
+<script src="{{ url_for('static', filename='node_modules/geojson-vt/geojson-vt.js')}}"></script>
 <div class="row-fluid">
   <div class="span12">
     <div style="height: 70%; width: 97vw" id="map" class="map" tabindex="0">
@@ -775,6 +776,135 @@
 
    // Rename Button For Adana
    $(".adana-zoom-extent >button").html('A');
+
+
+
+
+
+
+//geojson-vt
+
+// Converts geojson-vt data to GeoJSON
+// Converts geojson-vt data to GeoJSON
+const replacer = function (key, value) {
+  if (!value || !value.geometry) {
+    return value;
+  }
+
+  let type;
+  const rawType = value.type;
+  let geometry = value.geometry;
+  if (rawType === 1) {
+    type = 'MultiPoint';
+    if (geometry.length == 1) {
+      type = 'Point';
+      geometry = geometry[0];
+    }
+  } else if (rawType === 2) {
+    type = 'MultiLineString';
+    if (geometry.length == 1) {
+      type = 'LineString';
+      geometry = geometry[0];
+    }
+  } else if (rawType === 3) {
+    type = 'Polygon';
+    if (geometry.length > 1) {
+      type = 'MultiPolygon';
+      geometry = [geometry];
+    }
+  }
+
+  return {
+    'type': 'Feature',
+    'geometry': {
+      'type': type,
+      'coordinates': geometry,
+    },
+    'properties': value.tags,
+  };
+};
+
+const style = new ol.style.Style({
+  fill: new ol.style.Fill({
+    color: '#eeeeee',
+  }),
+});
+
+const layer = new ol.layer.VectorTile({
+  title:"vt layer",
+  background: '#1a2b39',
+  style: function (feature) {
+    const color = feature.get('COLOR') || '#eeeeee';
+    style.getFill().setColor(color);
+    return style;
+  },
+});
+
+
+ // -----------------------------Layers for geojson-vt--------------------------
+  // 
+var otherGroup = new ol.layer.Group({
+    layers: [],
+    title: 'VT Veri Katmanları',
+  });
+
+map.addLayer(otherGroup);
+
+
+otherGroup.getLayers().push(layer);
+console.log(layer);
+
+const url = 'https://openlayers.org/data/vector/ecoregions.json';
+fetch(url)
+  .then(function (response) {
+    return response.json();
+
+  })
+  .then(function (json) {
+    const tileIndex = geojsonvt(json, {
+      extent: 4096,
+      debug: 1,
+    });
+    const format = new ol.format.GeoJSON({
+      // Data returned from geojson-vt is in tile pixel units
+      dataProjection: new ol.proj.Projection({
+        code: 'TILE_PIXELS',
+        units: 'tile-pixels',
+        extent: [0, 0, 4096, 4096],
+      }),
+    });
+    const vectorSource = new ol.source.VectorTile({
+      tileUrlFunction: function (tileCoord) {
+        // Use the tile coordinate as a pseudo URL for caching purposes
+        return JSON.stringify(tileCoord);
+      },
+      tileLoadFunction: function (tile, url) {
+
+        const tileCoord = JSON.parse(url);
+        const data = tileIndex.getTile(
+          tileCoord[0],
+          tileCoord[1],
+          tileCoord[2]
+        );
+        console.log(data);
+
+        const geojson = JSON.stringify(
+          {
+            type: 'FeatureCollection',
+            features: data ? data.features : [],
+          },
+          replacer
+        );
+        const features = format.readFeatures(geojson, {
+          extent: vectorSource.getTileGrid().getTileCoordExtent(tileCoord),
+          featureProjection: map.getView().getProjection(),
+        });
+        tile.setFeatures(features);
+      },
+    });
+    layer.setSource(vectorSource);
+  });
+ 
 
 
 
